--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
-	<img src="img/logo.png">
-	<h1>Coming soon... Le Wagon</h1>
-</body>
+	<head>
+		<title></title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<div id="container">
+			<img id="logo" src="img/logo.png">
+			<h1>Coming soon... PricePro!</h1>
+		</div>
+	</body>
 </html>
